// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FareTypeRadios should render a set of radio buttons for just standard fares when no other fares are provided 1`] = `
<Fragment>
  <div
    className="govuk-radios"
  >
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-single"
        name="fareType"
        type="radio"
        value="single"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-single"
      >
        Single Ticket - Point to Point
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-period"
        name="fareType"
        type="radio"
        value="period"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-period"
      >
        Period Ticket (Day, Week, Month and Annual)
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-return"
        name="fareType"
        type="radio"
        value="return"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-return"
      >
        Return Ticket - Single Service
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-flatFare"
        name="fareType"
        type="radio"
        value="flatFare"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-flatFare"
      >
        Flat Fare Ticket - Single Journey
      </label>
    </div>
  </div>
</Fragment>
`;

exports[`FareTypeRadios should render a set of radio buttons with standard fares and other fares separated under their respective headings 1`] = `
<Fragment>
  <h2
    className="govuk-heading-m govuk-!-margin-top-5"
    id="standard-fares-heading"
  >
    Standard Fares
  </h2>
  <div
    className="govuk-radios"
  >
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-single"
        name="fareType"
        type="radio"
        value="single"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-single"
      >
        Single Ticket - Point to Point
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-period"
        name="fareType"
        type="radio"
        value="period"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-period"
      >
        Period Ticket (Day, Week, Month and Annual)
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-return"
        name="fareType"
        type="radio"
        value="return"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-return"
      >
        Return Ticket - Single Service
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-flatFare"
        name="fareType"
        type="radio"
        value="flatFare"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-flatFare"
      >
        Flat Fare Ticket - Single Journey
      </label>
    </div>
    <h2
      className="govuk-heading-m govuk-!-margin-top-5"
      id="other-fares-heading"
    >
      Other Fares
    </h2>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-multiOperator"
        name="fareType"
        type="radio"
        value="multiOperator"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-multiOperator"
      >
        Multi-operator - A ticket that covers more than one operator
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        className="govuk-radios__input"
        id="fare-type-schoolService"
        name="fareType"
        type="radio"
        value="schoolService"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="fare-type-schoolService"
      >
        School Service - A ticket available to pupils in full-time education
      </label>
    </div>
  </div>
</Fragment>
`;
